removed unused graph-common lib properties and deactivated cors

--- a/graphql-sample-app/src/main/resources/application.yml
+++ b/graphql-sample-app/src/main/resources/application.yml
@@ -5,11 +5,5 @@ server:
       port: 9000
 
 graphql:
-      spring-graphql-common:
-               clientMutationIdName: clientMutationId
-               injectClientMutationId: true
-               allowEmptyClientMutationId: false
-               mutationInputArgumentName: input
-               outputObjectNamePrefix: Payload
-               inputObjectNamePrefix: Input
-               schemaMutationObjectName: Mutation
+      servlet:
+               corsEnabled: false
